# ROS2-Final-Project

./: README.md  frames_2026-02-01_23.36.32.gv  path.csv
install/: local_setup.sh  setup.sh
install/edges_bringup/share/edges_bringup/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/edges_bringup/share/edges_bringup/launch/: edges_gazebo.launch.py
install/edges_description/share/edges_description/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/edges_description/share/edges_description/urdf/: edges.urdf.xacro  edges_gazebo.xacro  lidar.xacro
install/edges_description/share/edges_description/worlds/: Test.world  x.world
install/my_robot_bringup/share/my_robot_bringup/: package.sh  package.xml
install/my_robot_description/share/my_robot_description/: package.sh
install/path_recorder/lib/path_recorder/: path_to_csv_recorder
install/path_recorder/share/path_recorder/: package.ps1  package.sh
install/turtlesim_replay/lib/turtlesim_replay/: perfect_replay  turtlesim_player
install/turtlesim_replay/share/turtlesim_replay/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
log/: latest_build
src/edges_bringup/: CMakeLists.txt
src/edges_description/: CMakeLists.txt  package.xml
src/edges_description/rviz/: edges_config.rviz
src/edges_description/urdf/: edges.urdf.xacro  edges_mobile_robot.xacro  material.xacro
src/my_robot_bringup/: CMakeLists.txt
src/my_robot_bringup/config/: my_nav2_params.yaml
src/my_robot_bringup/launch/: gazebo.launch.py  navigation.launch.py  slam.launch.py
src/my_robot_bringup/maps/: my_map.pgm
src/my_robot_bringup/my_robot_bringup/: patrol.py  simple_goal.py
src/my_robot_description/: CMakeLists.txt
src/my_robot_description/urdf/: my_robot.urdf.xacro
src/my_robot_description/worlds/: my_world.world
src/path_recorder/: package.xml  setup.py
src/path_recorder/path_recorder/: path_to_csv_recorder.py
src/turtlesim_replay/: setup.cfg  setup.py
src/turtlesim_replay/turtlesim_replay/: perfect_replay.py  turtlesim_player.py
(+4 files in other folders)
